bacon: Enable Night Mode
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -382,4 +382,7 @@
 
     <!-- Enable blur support
     <bool name="config_uiBlurEnabled">true</bool>-->
+
+    <!-- Night Mode -->
+    <bool name="config_nightDisplayAvailable">true</bool>
 </resources>
