--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -385,4 +385,8 @@
 
     <!-- Night Mode -->
     <bool name="config_nightDisplayAvailable">true</bool>
+
+    <!-- Proximity check -->
+    <bool name="config_proximityCheckOnWake">true</bool>
+    <bool name="config_proximityCheckOnWakeEnabledByDefault">true</bool>
 </resources>
