Fix the theme display -Fix the color of the interface under the Dark（Pixel Dark） and Black（Pixel Black） themes

--- a/google/themes/Black/res/values/colors.xml
+++ b/google/themes/Black/res/values/colors.xml
@@ -34,29 +34,7 @@
     <color name="system_notification_accent_color">#ff4285f4</color> 
     <color name="background_material_dark">#ff000000</color>
     <color name="primary_material_dark">#ff000000</color>
-    <color name="background_floating_material_dark">#ff000000</color>
-    <color name="bright_foreground_light_disabled">#81000000</color>
+    <color name="background_floating_material_dark">#ff000000</color>   <!--OG:@color/material_grey_800-->
+    <color name="bright_foreground_light_disabled">#81000000</color>   <!--OG:##80000000-->
     <color name="background_holo_dark">#ff000000</color>
-    <color name="background_floating_material_light">@*android:color/primary_material_dark</color>
-    <color name="directory_background">@*android:color/background_material_dark</color>
-    <color name="drawer_background">@*android:color/primary_material_dark</color>
-    <color name="drawer_border">@*android:color/primary_material_dark</color>
-    <color name="menu_search_background">@*android:color/primary_material_dark</color>
-    <color name="window_background">@*android:color/background_material_dark</color>
-    <color name="item_doc_background">@*android:color/primary_material_dark</color>
-    <color name="item_doc_details">#ffffffff</color>
-    <color name="item_doc_title">#ffffffff</color>
-    <color name="primary_text_default_material_light">#ffffffff</color>
-    <color name="primary_text_disabled_material_light">#4dffffff</color>
-    <color name="root_details_color">#8affffff</color>
-    <color name="root_title_color">#ffffffff</color>
-    <color name="secondary_text_default_material_light">#b3ffffff</color>
-    <color name="secondary_text_disabled_material_light">#36ffffff</color>
-    <color name="sort_widget_text_color">#ffffffff</color>
-    <color name="bright_foreground_disabled_material_light">#80ffffff</color>
-    <color name="bright_foreground_material_light">@*android:color/white</color>
-    <color name="doc_icon_color">#ffb2b2b2</color>
-    <color name="ripple_material_light">#33ffffff</color>
-    <color name="scroll_thumb">#ff3367d6</color>
-    <color name="scroll_track">#00000000</color>
 </resources>
